stores and owners and managers connected